--- a/content/02-new-to-cardano/05-cardano-nodes.mdx
+++ b/content/02-new-to-cardano/05-cardano-nodes.mdx
@@ -23,7 +23,7 @@ various stakeholders in a single entity.
 The goal of blockchain technology is the production of an
 independently-verifiable and cryptographically-linked chain of records (blocks).
 A network of block producers works to collectively advance the blockchain. A
-[consensus](https://docs.cardano.org/core-concepts/consensus-explained) protocol provides transparency and decides which candidate blocks
+[consensus](https://docs.cardano.org/learn/consensus-explained) protocol provides transparency and decides which candidate blocks
 should be used to extend the chain.
 
 Submitted valid transactions might be included in any new block. A block is
@@ -64,6 +64,5 @@ will then be connected to other blocks in the chain.
 
 #### Related topics:
 
--   [Cardano node](/core-concepts/cardano-node)
--   [About the Cardano network](/explore-cardano/cardano-network/about-the-cardano-network)
--   [Operating a stake pool](/getting-started/operating-a-stake-pool/about-stake-pools)
+-   [About the Cardano network](https://docs.cardano.org/explore-cardano/cardano-network/about-the-cardano-network)
+-   [Operating a stake pool](https://docs.cardano.org/development-guidelines/operating-a-stake-pool/about-stake-pools)
