--- a/content/03-learn/04-delegation.mdx
+++ b/content/03-learn/04-delegation.mdx
@@ -13,7 +13,7 @@ fragmented.
 Anyone who owns ada can participate in stake delegation while
 retaining their spending power. Note that you can spend your ada normally at any
 time, regardless of how you delegated it. This mechanism will enable
-stakeholders to participate in the [slot leader](https://docs.cardano.org/glossary#slotleader) election process in each [epoch](https://docs.cardano.org/glossary#epoch).
+stakeholders to participate in the slot leader election process in each epoch.
 
 Stake delegation gives rise to *stake pools* that act in the similar way to
 mining pools in the Bitcoin protocol. Stake pool operators (SPOs) *must* be online 
@@ -34,7 +34,7 @@ With the concept of delegation, any stakeholder can allow a stake pool to
 generate blocks for the Cardano network. Then the rewards will be paid by the
 protocol for all participants, including the fees for the SPO. A
 stake holder delegates to a particular pool ID, which is the hash of the
-operator's [verification key](https://docs.cardano.org/core-concepts/cardano-keys#vrfkeys).
+operator's [verification key](https://docs.cardano.org/learn/cardano-keys#vrfkeys).
 
 To limit the delegate’s block generation power to a certain range of
 epochs and slots, the stakeholder can limit the proxy signing key’s valid
