--- a/content/03-learn/10-about-hard-forks.mdx
+++ b/content/03-learn/10-about-hard-forks.mdx
@@ -61,7 +61,7 @@ unchanged, and the blockchain would appear as a single entity.
 _Token locking_ is a new feature being added to the Shelley protocol to
 enable various kinds of smart contract use cases, including creating and
 transacting with multi-asset tokens, as well as establishing support for the
-[Voltaire](https://roadmap.cardano.org/en/voltaire/) voting mechanism. 
+Voltaire voting mechanism. 
 
 Token locking is the process of ‘reserving’ a certain amount of assets and 
 committing not to dispose of them for a specified period of time. This feature
