--- a/content/03-learn/12-ouroboros-overview.mdx
+++ b/content/03-learn/12-ouroboros-overview.mdx
@@ -20,7 +20,7 @@ In 2017, [Charles Hoskinson](https://en.wikipedia.org/wiki/Charles_Hoskinson) ad
 
 Combining unique technology and mathematically verified mechanisms (including behavioral psychology and economic philosophy principles), Ouroboros guarantees and supports the security and sustainability of any blockchain implementing it. The result is a protocol with proven security guarantees, and able to facilitate the propagation of global, permissionless networks with minimal energy requirements. Cardano is the first such network.
 
-Ouroboros selects participants [-stake pools](https://docs.cardano.org/getting-started/operating-a-stake-pool/about-stake-pools), in this case- to create new blocks based on the stake they control in the network, and facilitates the creation of distributed, permissionless networks capable of sustainably supporting new markets.
+Ouroboros selects participants - stake pools, in this case - to create new blocks based on the stake they control in the network, and facilitates the creation of distributed, permissionless networks capable of sustainably supporting new markets.
 
 ### Ouroboros implementations
 
