--- a/content/06-development-guidelines/07-integrating-with-third-parties.mdx
+++ b/content/06-development-guidelines/07-integrating-with-third-parties.mdx
@@ -5,20 +5,12 @@ metaTitle: Integrating with third parties
 
 ## Getting started with third party integration
 
-<Info info>
-  Exchanges interested in or currently listing ada should move to a
-  Shelley-supported version of Cardano.
-</Info>
 
-<Info warn>
-
-Old components like **cardano-sl:node**, **cardano-sl:explorer**,
-**cardano-sl:wallet** will not be supported after the Shelley Hard-fork.
 
 </Info>
 
-Only the following components are Shelley compliant and will be supported during
-and after the Shelley hard-fork and support both Byron and Shelley eras.
+The following components are Babbage compliant and will be supported during
+and after the hard-fork.
 
 - [`cardano-node`](https://github.com/input-output-hk/cardano-node) - the latest
   cardano-node, which supports Ouroboros Praos.
@@ -51,9 +43,6 @@ and after the Shelley hard-fork and support both Byron and Shelley eras.
 The only currently available language target is Haskell, although support for
 JavaScript is being worked on and should be available soon.
 
-<Info warn>
+Also, see the [compatibility matrix](https://docs.cardano.org/tools/comp-matrix) and latest [release notes](https://docs.cardano.org/tools/release-notes).
 
-Adrestia’s components and their respective repositories are also listed on
-[`Github`](https://github.com/input-output-hk/adrestia/).
 
-</Info>
