--- a/content/06-development-guidelines/07-integrating-with-third-parties.mdx
+++ b/content/06-development-guidelines/07-integrating-with-third-parties.mdx
@@ -5,12 +5,8 @@ metaTitle: Integrating with third parties
 
 ## Getting started with third party integration
 
-
-
-</Info>
-
-The following components are Babbage compliant and will be supported during
-and after the hard-fork.
+The following components are Babbage compliant and will be supported during and
+after the hard-fork.
 
 - [`cardano-node`](https://github.com/input-output-hk/cardano-node) - the latest
   cardano-node, which supports Ouroboros Praos.
@@ -43,6 +39,5 @@ and after the hard-fork.
 The only currently available language target is Haskell, although support for
 JavaScript is being worked on and should be available soon.
 
-Also, see the [compatibility matrix](https://docs.cardano.org/tools/comp-matrix) and latest [release notes](https://docs.cardano.org/tools/release-notes).
-
-
+Also, see the [compatibility matrix](https://docs.cardano.org/tools/comp-matrix)
+and latest [release notes](https://docs.cardano.org/tools/release-notes).
