Update and rename 04-community-content.mdx to 03-community-content.mdx

--- a/content/11-community/03-community-content.mdx
+++ b/content/11-community/03-community-content.mdx
@@ -16,7 +16,8 @@ we cannot verify that their content is fully accurate or completely up-to-date.
 * [video guide: How to create a Cardano stake pool](https://www.youtube.com/playlist?list=PLyThQPJpttTJ4r9wUdlWi1DMty4nAT85d)
 * [building a Cardano stake pool using CNTools](https://www.youtube.com/watch?v=UN4rSRr7LDk&feature=youtu.be)
 * [Plutus Pioneers Program notes](https://plutus-pioneer-program.readthedocs.io/en/latest/plutus_pioneer_program.html)
+* [Developer resources on Essential Cardano](https://www.essentialcardano.io/developer)
 
 If you have produced material and would like to contribute your content for
-inclusion on this page, please click "Edit in Github" in the upper-right hand
+inclusion on this page, please click 'Edit in Github' in the upper-right hand
 corner and submit an issue or PR.
