--- a/content/06-development-guidelines/04-references.mdx
+++ b/content/06-development-guidelines/04-references.mdx
@@ -13,7 +13,7 @@ For more details, see:
 -   [Scripts](https://github.com/input-output-hk/cardano-node/blob/master/doc/reference/simple-scripts.md)
 -   [Multi-asset support](https://github.com/input-output-hk/cardano-node/blob/master/doc/reference/multi-assets.md)
     
-Plutus scripts:
+**Plutus scripts**
 
 -   [About Plutus scripts](https://github.com/input-output-hk/cardano-node/blob/master/doc/reference/plutus/babbage-script-example.md) (Plutus V2 examples)
 -   [Plutus spending script](https://github.com/input-output-hk/cardano-node/blob/master/doc/reference/plutus/plutus-spending-script-example.md)
@@ -21,3 +21,12 @@ Plutus scripts:
 -   [Babbage withdrawing script example](https://github.com/input-output-hk/cardano-node/blob/master/doc/reference/plutus/babbage-withdrawing-script-example.md)
     
 >Note: For more information about Plutus, tutorials, and how-to guides go to [Plutus Docs](https://plutus.readthedocs.io/en/latest/).
+
+**Vasil tutorials**
+
+Tutorials below provide explainers of the new CIPs introduced with Vasil fanctionality. Examples incude the usage of Plutus V2 scripts. 
+
+- [How to use reference inputs](https://github.com/perturbing/vasil-tests/blob/main/reference-inputs-cip-31.md)
+- [How to use inline datums](https://github.com/perturbing/vasil-tests/blob/main/inline-datums-cip-32.md)
+- [How to reference scripts](https://github.com/perturbing/vasil-tests/blob/main/referencing-scripts-cip-33.md)
+- [How to use collateral outputs](https://github.com/perturbing/vasil-tests/blob/main/collateral-output-cip-40.md)
