--- a/content/06-development-guidelines/04-references.mdx
+++ b/content/06-development-guidelines/04-references.mdx
@@ -24,7 +24,7 @@ For more details, see:
 
 **Vasil tutorials**
 
-Tutorials below provide explainers of the new CIPs introduced with Vasil fanctionality. Examples incude the usage of Plutus V2 scripts. 
+Tutorials below provide explainers of the new CIPs introduced with Vasil functionality. Examples incude the usage of Plutus V2 scripts. 
 
 - [How to use reference inputs](https://github.com/perturbing/vasil-tests/blob/main/reference-inputs-cip-31.md)
 - [How to use inline datums](https://github.com/perturbing/vasil-tests/blob/main/inline-datums-cip-32.md)
