adding more links to Plutus resources

--- a/content/09-plutus/02-plutus-resources.mdx
+++ b/content/09-plutus/02-plutus-resources.mdx
@@ -50,6 +50,12 @@ Haskell language server implementation is an implementation of a server for the 
 **Developer resources**:
 
 -   [Haskell language server documentation](https://haskell-language-server.readthedocs.io/en/latest/index.html)
+
+### Haskell course
+
+Plutus Core, Cardano’s scripting language, is written in Haskell. To use Plutus, it is essential to know the basics of Haskell. To help with the onboarding journey, IOG's education team created the Haskell course for beginners. You can find the repository with explainers, links to lectures, and more below.
+
+-   [Haskell course](https://github.com/input-output-hk/haskell-course#haskell-course)
     
 ### Cardano node API documentation
 
@@ -81,6 +87,22 @@ This section includes references to Plutus user documentation such as explanatio
 
 -   [Video presentation on the Plutus Platform](https://www.youtube.com/watch?v=usMPt8KpBeI&feature=youtu.be): in this session from the 2020 Cardano Summit, Michael Peyton-Jones walks us through working with Plutus, while Jann Müller then takes us through the Plutus Application Platform, where assets can be built and launched. He also demonstrates how tokens can be transferred using a smart contract.
     
+## Plutus Pioneer Program
+
+-   [Plutus Pioneer Program](https://github.com/input-output-hk/plutus-pioneer-program#readme): includes lectures, examples, and exercises
+-   [Plutus Pioneer Program notes and documentation](https://plutus-pioneer-program.readthedocs.io/en/latest/)
+-   Latest ['plutus-pioneer-program' questions on Cardano Stack Exchange](https://cardano.stackexchange.com/questions/tagged/plutus-pioneer-program)
+-   [Plutus Pioneer Discord](https://discord.com/channels/826816523368005654/826836848520200233)
+    
+**Plutus Pioneer community notes**:
+
+- [How to prepare for the Plutus Pioneer Program](https://www.essentialcardano.io/article/how-to-prepare-for-the-plutus-pioneer-program)
+- [Essential Resources and Documentation for the Plutus Pioneer Program](https://www.essentialcardano.io/article/essential-resources-and-documentation-for-the-plutus-pioneer-program)
+- [Plutus Pioneer Program Part 1: Understanding the eUTXO Model and Coding the first Smart Contract](https://www.essentialcardano.io/article/plutus-pioneer-program-part-1-understanding-the-eutxo-model-and-coding-the-first-smart-contract)
+- [Plutus Pioneer Program - Part 2: How to “deploy” a Smart Contract in Cardano](https://www.essentialcardano.io/article/plutus-pioneer-program-part-2-how-to-deploy-a-smart-contract-in-cardano)
+- [Plutus Pioneer Program - Part 3: How to Mint and Burn Tokens and NFTs in Cardano](https://www.essentialcardano.io/article/plutus-pioneer-program-part-3-how-to-mint-and-burn-tokens-and-nfts-in-cardano)
+- [Plutus Pioneer Program - Part 4: State Machine with Plutus (1/2)](https://www.essentialcardano.io/article/plutus-pioneer-program-part-4-state-machine-with-plutus-12)
+- [Plutus Pioneer Program - Part 5: State Machine with Plutus (2/2)](https://www.essentialcardano.io/article/plutus-pioneer-program-part-5-state-machine-with-plutus-22)
 
 ## Plutus community resources
 
@@ -89,20 +111,60 @@ This section provides links to Plutus community resources.
 If you are a community member engaged with Plutus development, please raise a pull request to add more relevant links and information.
 
 -   [Cardano forum for Plutus discussions](https://forum.cardano.org/c/developers/cardano-plutus/148)
--   [Plutus community docs](https://www.essentialcardano.io/article/plutus-community-docs-a-new-documentation-site-for-devs-by-devs)
+-   [Plutus community docs](https://www.essentialcardano.io/article/plutus-community-docs-a-new-documentation-site-for-devs-by-devs) article
+-   [Plutus community docs](https://plutus-community.readthedocs.io/en/latest/)
     
-## Plutus Pioneer Program
+**Discussions & support:**
 
--   [Plutus Pioneer Program](https://github.com/input-output-hk/plutus-pioneer-program#readme): includes lectures, examples, and exercises
+-   [IOG Technical Discord](https://discord.com/channels/826816523368005654/897221118111400007)
+-   [Cardano Stack Exchange](https://cardano.stackexchange.com/)
+-   [Cardano Forum](https://forum.cardano.org/)
+
+## Plutus open source tooling
+
+-   **Plutonomicon**
+    - [Plutonomicon - independent community Plutus documentation](https://github.com/Plutonomicon/plutonomicon/blob/main/README.md)
+    - [Plutonomicon - GitHub Repositories](https://github.com/Plutonomicon)
     
--   **Plutus Pioneer community notes**:
-    - [How to prepare for the Plutus Pioneer Program](https://www.essentialcardano.io/article/how-to-prepare-for-the-plutus-pioneer-program)
-    - [Essential Resources and Documentation for the Plutus Pioneer Program](https://www.essentialcardano.io/article/essential-resources-and-documentation-for-the-plutus-pioneer-program)
-    - [Plutus Pioneer Program Part 1: Understanding the eUTXO Model and Coding the first Smart Contract](https://www.essentialcardano.io/article/plutus-pioneer-program-part-1-understanding-the-eutxo-model-and-coding-the-first-smart-contract)
-    - [Plutus Pioneer Program - Part 2: How to “deploy” a Smart Contract in Cardano](https://www.essentialcardano.io/article/plutus-pioneer-program-part-2-how-to-deploy-a-smart-contract-in-cardano)
-    - [Plutus Pioneer Program - Part 3: How to Mint and Burn Tokens and NFTs in Cardano](https://www.essentialcardano.io/article/plutus-pioneer-program-part-3-how-to-mint-and-burn-tokens-and-nfts-in-cardano)
-    - [Plutus Pioneer Program - Part 4: State Machine with Plutus (1/2)](https://www.essentialcardano.io/article/plutus-pioneer-program-part-4-state-machine-with-plutus-12)
-    - [Plutus Pioneer Program - Part 5: State Machine with Plutus (2/2)](https://www.essentialcardano.io/article/plutus-pioneer-program-part-5-state-machine-with-plutus-22)
+-   **Harmonic**
+    -  [HarmonicPool (Harmonic) - GitHub Repositories](https://github.com/HarmonicPool)
+    
+-   **TxPipe**
+    - [Aiken](https://github.com/txpipe/aiken)
+    - [Oura](https://github.com/txpipe/oura)
+     - [Scrolls](https://github.com/txpipe/scrolls)
+    
+-   **dcSpark**
+    - [Carp](https://github.com/dcSpark/carp/tree/main/docs)
+    - [Cardano Multiplatform lib](https://github.com/dcSpark/cardano-multiplatform-lib)
+ 
+-   **MLabs**
+    - [Plutlib](https://github.com/mlabs-haskell/plutip)
+
+## Environment setup
+
+**Windows Subsystem for Linux**
+    
+-   [Windows/WSL2 (2nd alternative) - Plutus Community Docs](https://plutus-community.readthedocs.io/en/latest/#Environment/Build/WindowsWSL/)
+-   [How to uninstall WSL2 on Windows 10](https://pureinfotech.com/uninstall-wsl2-windows-10/)
+-   [How to install WSL2 (Windows Subsystem for Linux 2) on Windows 10 - Pureinfotech](https://pureinfotech.com/install-windows-subsystem-linux-2-windows-10/)
+-   [Running Plutus on WSL - Create Cardano (ADA) Contracts on Windows 10 - YouTube](https://www.youtube.com/watch?v=mnfItts6VbU)
+-   [Plutus Smart Contract Development: Running Plutus on Windows with WSL - YouTube](https://www.youtube.com/watch?v=g2F9raiGp_s)
+    
+**Nix**
+
+-   [Alternative Haskell Infrastructure for Nixpkgs](https://input-output-hk.github.io/haskell.nix/index.html)
+-   [Plutus Community Docs - Nix environment setup for Linux (Ubuntu & Linux Arch)](https://plutus-community.readthedocs.io/en/latest/#Environment/Build/Ubuntu/)
+-   [Nix Flakes, Part 1: An introduction and tutorial - Tweag](https://www.tweag.io/blog/2020-05-25-flakes/)
+-   [Flakes - NixOS Wiki](https://nixos.wiki/wiki/Flakes)
+-   [episode 0 - Why Nix? - YouTube](https://www.youtube.com/watch?v=UNcv5XlIfu0&list=PLErve0z4I-unD_Kz9LuK7fm_0xaZPyKA4)
+
+## Video content for developers
+
+-   [Plutus Office Hours with Lars - announced on Discord](https://discord.com/channels/826816523368005654/897221118111400007)
+-   [NerdOut - YouTube Playlist For Cardano Developers by Andrew Westberg](https://www.youtube.com/playlist?list=PLee7sQnxtLo4g-rtxwGHbkou3lVxpgvW_)
+-   [Loxe Inc. - Cardano Builders Check-In](https://youtube.com/playlist?list=PLzRV1oB99VB7zGbzi_qBsctCgP-C41n5A)
+-   [Cardano - DApp360 Workforce LLC - School for Cardano Developers](https://www.dapp360.io/d360-training/cardano/)
 
 ## Blog posts about Plutus on iohk.io
 
