--- a/content/07-cardano-components/11-daedalus-wallet.mdx
+++ b/content/07-cardano-components/11-daedalus-wallet.mdx
@@ -12,7 +12,7 @@ Daedalus wallet is a full-node hierarchical deterministic (HD) desktop wallet fo
 ### Key features
 
 - Easy installation with one-click setup of bundled Cardano node
-- Locally stored wallets and encrypted [private keys](https://docs.cardano.org/core-concepts/cardano-keys), not shared with third-party servers
+- Locally stored wallets and encrypted [private keys](https://docs.cardano.org/learn/cardano-keys), not shared with third-party servers
 - Trustless operation with locally running full Cardano node which independently validates full transaction history of the blockchain
 - Supports Cardano network by participating in Cardano protocol
 - Wallet backup and restoration using mnemonics phrases
