deleting outdated links

--- a/content/07-cardano-components/07-smash.mdx
+++ b/content/07-cardano-components/07-smash.mdx
@@ -744,6 +744,5 @@ listing with SMASH only. As a decentralized network, at no point will stake pool
 operations themselves be affected.
 
 If you need further information or clarification about delisting, you can
-contact [this email address](mailto:smash@iohk.io), or contact Ben O’Hanlon
-directly via [Telegram](http://@benohanlon) or [Twitter](http://@benohanlon).
+contact [this email address](mailto:smash@iohk.io).
 
