--- a/content/07-cardano-components/03-cardano-rosetta/03-get-started-rosetta.mdx
+++ b/content/07-cardano-components/03-cardano-rosetta/03-get-started-rosetta.mdx
@@ -7,7 +7,7 @@ The Rosetta API is made up of two core components; the [Data API](https://www.ro
 
 For full details, read the [Rosetta API specification](https://www.rosetta-api.org/docs/1.4.4/welcome.html). For an overview of the interactions, view the [Flow of Operations](https://www.rosetta-api.org/docs/1.4.4/construction_api_introduction.html#flow-of-operations).
 
-Here you will find developer examples, exchange examples, and the Rosetta [API calls](/rosetta/api-calls-rosetta). 
+Here you will find developer examples, exchange examples, and the Rosetta [API calls](https://docs.cardano.org/cardano-components/cardano-rosetta/api-calls-rosetta). 
 
 ## Developer Examples 
 
