--- a/content/08-native-tokens/03-getting-started.mdx
+++ b/content/08-native-tokens/03-getting-started.mdx
@@ -16,7 +16,7 @@ This section describes how to:
 
 > Note: Users who do not need to create new assets (“token holders”) will be able to send and receive existing multi-asset tokens using a wallet such as Daedalus or Yoroi, and with no requirement to use any CLI commands.
 
-To start, please ensure that you are familiar with setting up and operating the [Cardano node](https://github.com/input-output-hk/cardano-node). Alternatively, see instructions on how to [start your node](https://github.com/input-output-hk/cardano-node/blob/master/doc/stake-pool-operations/start_your_nodes.md) to submit the commands. You will not need to set up and start a full block producing node (“stake pool”), just a much simpler relay node. This node will need to connect to a Cardano network that is capable of processing native tokens (e.g., the native token pre-production environment (PPE), or the Cardano Mainnet once it has been upgraded).
+To start, please ensure that you are familiar with setting up and operating the [Cardano node](https://github.com/input-output-hk/cardano-node). Alternatively, see instructions on how to [start your node](https://github.com/input-output-hk/cardano-node/blob/master/doc/stake-pool-operations/2_start_your_nodes.md) to submit the commands. You will not need to set up and start a full block producing node (“stake pool”), just a much simpler relay node. This node will need to connect to a Cardano network that is capable of processing native tokens (e.g., the native token pre-production environment (PPE), or the Cardano Mainnet once it has been upgraded).
 
 ### Configuring cardano-node to run using cardano-cli
 
@@ -138,7 +138,7 @@ cardano-cli query utxo --address "$ADDRESS" --testnet-magic 1
 
 ### Token minting policies
 
-Token minting policies are written using multi-signature scripts. This allows the asset controller to express conditions such as the need for specific token issuers to agree to mint new tokens, or to forbid minting tokens after a certain slot (if [token locking](/core-concepts/about-hard-forks/#tokenlocking:shelleyprotocolupdate) is also used).
+Token minting policies are written using multi-signature scripts. This allows the asset controller to express conditions such as the need for specific token issuers to agree to mint new tokens, or to forbid minting tokens after a certain slot (if [token locking](https://docs.cardano.org/learn/about-hard-forks/#tokenlocking:shelleyprotocolupgrade) is also used).
 
 Here’s an example of a very simple minting policy, which grants the right to mint tokens to a single key:
 
