--- a/content/08-native-tokens/06-exchange-multi-asset-management-scenarios.mdx
+++ b/content/08-native-tokens/06-exchange-multi-asset-management-scenarios.mdx
@@ -5,9 +5,9 @@ metaTitle: Exchange multi-asset management scenarios
 
 Native assets follow a set of predefined rules known as *minting policies*, which are defined by users who want to create a new asset. These policies set the upper and lower limits of what a token can do, who can do it, and might also define the point in the transaction lifecycle at which it can be done.
 
-A minting policy is bound by the network protocol and ledger-defined rules. One such rule is [the minimum UTXO value](https://cardano-ledger.readthedocs.io/en/latest/explanations/min-utxo.html) (the minimum amount of ada that must be sent in a single transaction.) The value is currently set to 1 ada, so to transact any native asset on the Cardano network, a minimum of 1 ada must be included and accounted for within the transaction. This does not mean that you have to send only 1 ada to transact native assets. You can use any amount of ada, so it is important that exchanges and wallets are aware of this, and know what to do in such cases.  
+A minting policy is bound by the network protocol and ledger-defined rules. One such rule is [the minimum UTXO value](https://docs.cardano.org/native-tokens/minimum-ada-value-requirement) (the minimum amount of ada that must be sent in a single transaction.) The value is currently set to 1 ada, so to transact any native asset on the Cardano network, a minimum of 1 ada must be included and accounted for within the transaction. This does not mean that you have to send only 1 ada to transact native assets. You can use any amount of ada, so it is important that exchanges and wallets are aware of this, and know what to do in such cases.  
 
-> Note: It is possible to verify and pinpoint these specific native asset transactions using [cardano-graphql](https://github.com/input-output-hk/cardano-graphql#overview) or [cardano-rosetta](https://docs.cardano.org/rosetta/learn-rosetta).
+> Note: It is possible to verify and pinpoint these specific native asset transactions using [cardano-graphql](https://github.com/input-output-hk/cardano-graphql#overview) or [cardano-rosetta](https://docs.cardano.org/cardano-components/cardano-rosetta/about-cardano-rosetta).
 
 ## Multi-asset management scenarios
 
@@ -107,7 +107,7 @@ http://localhost:8090/v2/wallets
 
 Tokens created using a minting policy follow a predefined set of rules. The minting policy might allow token holders to burn or create new tokens, for example. In most cases, if you receive unwanted tokens, you will need to either return them to the issuer or sender, or put them somewhere else for safekeeping. Read the [minting policies topic](https://cardano-ledger.readthedocs.io/en/latest/explanations/policies.html) for more information on minting policies.
 
-> Note: The minimum cost of sending any amount of native asset is one ada, plus the transaction fee. Read the [minimum ada value requirement topic](https://cardano-ledger.readthedocs.io/en/latest/explanations/min-utxo.html) for more information on the minimum UTXO requirements.
+> Note: The minimum cost of sending any amount of native asset is one ada, plus the transaction fee. Read the [minimum ada value requirement topic](https://docs.cardano.org/native-tokens/minimum-ada-value-requirement) for more information on the minimum UTXO requirements.
 
 **Option 1**:  Send tokens back to the issuer or sender:
 
