--- a/content/09-plutus/02-plutus-resources.mdx
+++ b/content/09-plutus/02-plutus-resources.mdx
@@ -134,6 +134,9 @@ If you are a community member engaged with Plutus development, please raise a pu
 -   **MLabs**
     - [Plutlib](https://github.com/mlabs-haskell/plutip)
 
+-   **dQuadrant**
+    - [Kuber](https://github.com/dQuadrant/kuber#readme)
+
 ## Environment setup
 
 **Windows Subsystem for Linux**
